fix: picture in regular view doesn't stretch to accomodate its aspect ratio anymore

--- a/list-view-style.css
+++ b/list-view-style.css
@@ -76,7 +76,7 @@ body {
 .img {
   width: 100%;
   height: 100%;
-  border-radius: 5px 0px 0px 5px;
+  object-fit: fill;
 }
 
 .img-container {
