--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 .img {
   width: 100%;
   height: 100%;
-  border-radius: 5px 5px 0px 0px;
+  object-fit: cover;
 }
 
 .img-container {
